--- a/src/app/pages/reportes-page/reportes-page.component.html
+++ b/src/app/pages/reportes-page/reportes-page.component.html
@@ -1,3 +1,4 @@
+<!--! PRINCIPAL PAGE-->
 <div class="h-100 w-100 overflow-hidden ">
     <div class="vh-100 wrapper d-flex bd-highlight">
         <shared-sidebar class="bd-highlight"></shared-sidebar>
