--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,7 +1,7 @@
-<!--* Text modal execution-->
+<!--! Text modal execution-->
 <a href="#" class="text-decoration-none" data-bs-toggle="modal" data-bs-target="#forgotPasswordModal">¿Olvidó contraseña?</a>
 
-<!--* Modal-->
+<!--! Modal-->
 <div class="modal fade" id="forgotPasswordModal" tabindex="-1" aria-labelledby="forgotPasswordModalText" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
@@ -66,22 +66,6 @@
                             </div>
                         }
                     </div>
-                    <!--* Mensajes -->
-                    <!-- @if (messageError == "VALID") {
-                        <div
-                            class="p-1 my-2 fs-6 text-center text-success-emphasis bg-success-subtle border border-success-subtle rounded-3">
-                            Correo de recuperación fue enviado a su correo electronico
-                        </div>
-                    }
-                    @else if (messageError !== "") {
-                        <div
-                            class="py-1 my-2 text-center text-danger-emphasis bg-danger-subtle border border-danger-subtle rounded-3">
-                            Correo electronico o Documento DUI/NIT invalido.
-                        </div>
-                    }
-                    @else {
-                        <div class="py-1 my-2 bg-white text-white my-1">|</div>
-                    } -->
                     <!--* Input Button-->
                     <div class="d-flex justify-content-center">
                         <input type="submit" class="btn btn-primary w-50" value="Restablecer">
