--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,8 +1,8 @@
-<!--* Input Group template-->
+<!--! Input Group template-->
 <div class="mb-3">
     <div class="input-group">
         <div class="form-floating">
-            <!--! INPUT ELEMENT-->
+            <!--* INPUT ELEMENT-->
             <input 
                 class="form-control" 
                 [id]="id" 
@@ -12,7 +12,7 @@
                 [required]="required"
                 [readOnly]="readOnly"
                 [ngClass]="{'border-danger-subtle border-2': messageError != '' && formSubmitted}">
-            <!--! FLOATING PLACEHOLDER ELEMENT-->
+            <!--* FLOATING PLACEHOLDER ELEMENT-->
             <label [for]="id">{{label}}</label>
         </div>
         <!--! EYE ICON ELEMENT (password)-->
