--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -17,7 +17,7 @@
                 class="btn btn-toggle align-items-center rounded text-light d-flex align-items-center col-auto"
                 data-bs-toggle="collapse" data-bs-target="#reportesdiarios-collapse" 
                 aria-expanded="false" style="font-size: 0.9em; color: #ffffff;">
-            <span class="px-2">Reportes Diarios</span>
+            <span class="px-2">Reportes</span>
             <i class="bi bi-caret-right-fill mx-1"></i>
             </button>
             <div class="collapse" id="reportesdiarios-collapse">
